--- a/template/ec2.yaml
+++ b/template/ec2.yaml
@@ -1,19 +1,32 @@
 
-Parameters:
-  KeyName:
-    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
-    Type: 'AWS::EC2::KeyPair::KeyName'
-    ConstraintDescription: must be the name of an existing EC2 KeyPair.
-  InstanceType:
-    Description: WebServer EC2 instance type
-    Type: String
-    Default: t2.micro
-  VpcID:
-    Type: 'AWS::EC2::VPC::Id'
-  SubnetID:
-    Type: 'AWS::EC2::Subnet::Id'
-  SecurityGroupID:
-    Type: 'AWS::EC2::SecurityGroup::Id'
+Metadata:
+  AWS::CloudFormation::Interface:
+    ParameterGroups:
+      -
+        Label:
+          default: "EC2 Configuration"
+        Parameters:
+          - InstanceType
+          - VpcID
+          - SubnetID
+          - SecurityGroupID
+          - KeyName
+
+    ParameterLabels:
+      KeyName:
+        Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
+        Type: 'AWS::EC2::KeyPair::KeyName'
+        ConstraintDescription: must be the name of an existing EC2 KeyPair.
+      InstanceType:
+        Description: WebServer EC2 instance type
+        Type: String
+        Default: t2.micro
+      VpcID:
+        Type: 'AWS::EC2::VPC::Id'
+      SubnetID:
+        Type: 'AWS::EC2::Subnet::Id'
+      SecurityGroupID:
+        Type: 'AWS::EC2::SecurityGroup::Id'
 Resources:
     myEC2Instance:
       Type: AWS::EC2::Instance
