--- a/template/SecurityGroup.yaml
+++ b/template/SecurityGroup.yaml
@@ -16,37 +16,29 @@ Metadata:
     - Label:
         default: AWS Parameters
       Parameters:
-        - SshAccessCidr
         - Vpc
     ParameterLabels:
-      SshAccessCidr:
-        default: SSH Access From
       Vpc:
         default: Vpc Id
 
 Parameters:
   
-  SshAccessCidr:
-    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$
-    Description: The CIDR IP range that is permitted to SSH to bastion instance. Note - a value of 0.0.0.0/0 will allow access from ANY IP address.
-    Type: String
-    Default: 0.0.0.0/0
+
   Vpc:
     AllowedPattern: ^(vpc-)([a-z0-9]{8}|[a-z0-9]{17})$
     Description: The Vpc Id of an existing Vpc.
     Type: AWS::EC2::VPC::Id
 
 Resources:
-
-  BastionSecurityGroup:
+  PublicWindowsSecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
-      GroupDescription: Security group for Bastion instances
+      GroupDescription: Security group for public windows instance
       SecurityGroupIngress:
         - IpProtocol: tcp
-          FromPort: 22
-          ToPort: 22
-          CidrIp: !Ref SshAccessCidr
+          FromPort: 8080
+          ToPort: 8080
+          CidrIp: 0.0.0.0/0
       VpcId:
         !Ref Vpc
 
@@ -83,10 +75,7 @@ Resources:
           FromPort: 2049
           ToPort: 2049
           SourceSecurityGroupId: !Ref WebSecurityGroup
-        - IpProtocol: tcp
-          FromPort: 22
-          ToPort: 22
-          SourceSecurityGroupId: !Ref BastionSecurityGroup
+
   EfsSecurityGroupIngress:
     Type: AWS::EC2::SecurityGroupIngress
     Properties:
@@ -125,16 +114,10 @@ Resources:
           FromPort: 443
           ToPort: 443
           SourceSecurityGroupId: !Ref PublicAlbSecurityGroup
-        - IpProtocol: tcp
-          FromPort: 22
-          ToPort: 22
-          SourceSecurityGroupId: !Ref BastionSecurityGroup
       VpcId:
         !Ref Vpc
 
 Outputs:
-  BastionSecurityGroup:
-    Value: !Ref BastionSecurityGroup
   DatabaseSecurityGroup:
     Value: !Ref DatabaseSecurityGroup
   EfsSecurityGroup:
