--- a/template/SecurityGroup.yaml
+++ b/template/SecurityGroup.yaml
@@ -119,7 +119,7 @@ Resources:
 
 Outputs:
   PublicWindowsSecurityGroup:
-    Value: !Ref DatabaseSecurityGroup
+    Value: !Ref PublicWindowsSecurityGroup
   DatabaseSecurityGroup:
     Value: !Ref DatabaseSecurityGroup
   EfsSecurityGroup:
